--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     </div>
                     <div class="project-info">
                         <h3>Weather Dashboard</h3>
-                        <p>Interactive weather dashboard displaying real-time climate data with responsive charts and forecasting capabilities. Built with HTML, CSS, javascript.</p>
+                        <p>Interactive weather dashboard displaying real-time climate data with responsive charts and forecasting capabilities.</p>
                     </div>
                 </div>
                 
@@ -135,8 +135,8 @@
                         </div>
                     </div>
                     <div class="project-info">
-                        <h3>Photography Portfolio</h3>
-                        <p>Responsive photography portfolio website with dynamic image galleries, lightbox effects, and smooth animations. Showcases media editing and web design skills.</p>
+                        <h3>Image Gallery</h3>
+                        <p>Responsive photography portfolio website with dynamic image galleries.</p>
                     </div>
                 </div>
                 
