Resume Button Updated

--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
                 design and problem-solving.
             </p>
             <div class="hero-buttons">
-                <a href="#cv-download" class="btn btn-primary">RESUME</a>
+                <!-- <a href="#cv-download" class="btn btn-primary">RESUME</a> -->
+                <a href="https://docs.google.com/document/d/1PWnK9a84wBqma_VViRCoZRFqC070gF4X/edit?usp=sharing&ouid=110826916436722106299&rtpof=true&sd=true"
+                    target="_blank" class="btn btn-primary">Resume</a>
                 <a href="#projects" class="btn btn-secondary">PROJECTS</a>
             </div>
         </div>
